--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -1,11 +1,10 @@
-
 name: 部署文档
 
 on:
   push:
     branches:
       # 确保这是你正在使用的分支名称
-      - main
+      - master
 
 permissions:
   contents: write
@@ -26,13 +25,11 @@ jobs:
         with:
           run_install: true
 
-
       - name: 设置 Node.js
         uses: actions/setup-node@v3
         with:
           node-version: 18
           cache: pnpm
-
 
       - name: 构建文档
         env:
