--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -24,6 +24,7 @@ jobs:
         uses: pnpm/action-setup@v2.2.4
         with:
           run_install: true
+          version: 6.0.2
 
       - name: 设置 Node.js
         uses: actions/setup-node@v3
